--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,8 @@
 <html lang="zh">
 <head>
     <meta charset="UTF-8">
-    <title>Hello</title>
+    <link rel="shortcut icon" href="" type="image/x-icon">
+    <title></title>
 </head>
 <body>
     <div id="app"></div>
